# MerryNet

./: .env.example  .gitignore  ENV_SETUP_GUIDE.md  Makefile  QUICKSTART_ENV.md  README.md  SECURITY.md  SETUP.md  SETUP_GUIDE.md  mimi.html  package-lock.json  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
bootstrap-api/: .env.example  Cargo.toml  Dockerfile  README.md
bootstrap-api/src/: main.rs
deploy/: docker-compose.cognitive.yml  docker-compose.yml
deploy/logrotate/: maranet
deploy/nginx/: maranet.conf
deploy/proxmox/: vms.tf
docs/: API.md  DEVELOPER_MODE.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_GAP_ANALYSIS.md  PRODUCTION_READINESS_REPORT.md  RESELLER_SETUP.md  SECURITY_HARDENING_GUIDE.md  SYSTEM_SURVEY_REPORT_2026.md
gateway-service/: .env.example  Dockerfile  README.md  go.mod  go.sum
main-server/: .env.example  .eslintrc.json  Dockerfile  README.md  final_lint.txt  lint_output.txt  package-lock.json  package.json  render.yaml  tsconfig.json
main-server/dashboard/: package-lock.json  package.json
main-server/prisma/: schema.prisma  seed.ts
main-server/src/: index.ts
mobile-app/: README.md  analyze_output.txt  analyze_output_2.txt  pubspec.yaml
mobile-app/android/: local.properties
mobile-app/lib/: main.dart
proto/: maranet.proto  maranet_grpc.pb.go
reseller-agent/: .env.example  Dockerfile  go.mod  go.sum
scripts/: build-components.sh  deploy_full.sh  deploy_to_render.sh  setup.sh  setup_developer_mode.sh  test_developer_mode.sh  verify-production.sh
skyos/: README.md
(+102 files in other folders)
