[package]
name = "maranet-bootstrap"
version = "1.0.0"
edition = "2021"
description = "Maranet Zero - Lightweight Bootstrap API for zero-rated access"

[dependencies]
actix-web = "=4.4.0"
actix-rt = "2"
actix-cors = "=0.6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
time = "=0.3.36"
time-core = "=0.1.2"
url = "=2.4.1"
indexmap = "=2.6.0"
native-tls = "=0.2.13"
actix-http = "=3.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
